<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etIP"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ip_address"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/port_no"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIP"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/tvMessages"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textview_background"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPort"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/button_up"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/up"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage" />

    <Button
        android:id="@+id/button_op"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/op"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_up" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/down"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_op" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/left"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_op"
        app:layout_constraintEnd_toStartOf="@+id/button_op"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/right"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_op" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_message"
        app:layout_constraintEnd_toStartOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessages" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/send"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etMessage"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Tracking"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="TrackingMode"
        android:text="@string/camera"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_down" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/between_Ip_Port"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIP"
        app:layout_constraintStart_toEndOf="@+id/etIP" />

    <Switch
        android:id="@+id/switch_connect"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:text="@string/switch_connect"
        android:textAlignment="textEnd"
        android:thumb="@drawable/switch_ios_thumb"
        android:track="@drawable/switch_ios_track_selector"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPort" />
</androidx.constraintlayout.widget.ConstraintLayout>
